Start softmax assignment

--- a/assignments/assignment1/softmax.ipynb
+++ b/assignments/assignment1/softmax.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ca6cf2d4",
    "metadata": {
     "tags": [
@@ -81,14 +81,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9e9bbbbe",
    "metadata": {
     "tags": [
      "pdf-ignore"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data shape:  (49000, 3073)\n",
+      "Train labels shape:  (49000,)\n",
+      "Validation data shape:  (1000, 3073)\n",
+      "Validation labels shape:  (1000,)\n",
+      "Test data shape:  (1000, 3073)\n",
+      "Test labels shape:  (1000,)\n",
+      "dev data shape:  (500, 3073)\n",
+      "dev labels shape:  (500,)\n"
+     ]
+    }
+   ],
    "source": [
     "def get_CIFAR10_data(num_training=49000, num_validation=1000, num_test=1000, num_dev=500):\n",
     "    \"\"\"\n",
@@ -169,10 +184,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "25f2e5e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 2.336495\n",
+      "sanity check: 2.302585\n"
+     ]
+    }
+   ],
    "source": [
     "# First implement the naive softmax loss function with nested loops.\n",
     "# Open the file cs231n/classifiers/softmax.py and implement the\n",
@@ -204,15 +228,43 @@
     "Why do we expect our loss to be close to -log(0.1)? Explain briefly.**\n",
     "\n",
     "$\\color{blue}{\\textit Your Answer:}$ *Fill this in* \n",
-    "\n"
+    "\n",
+    "Because each class will have expected 0.1 probability."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a8cb3eb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numerical: -0.415717 analytic: -0.415718, relative error: 1.566700e-07\n",
+      "numerical: -0.421147 analytic: -0.421147, relative error: 7.758149e-09\n",
+      "numerical: 2.848142 analytic: 2.848142, relative error: 1.096952e-08\n",
+      "numerical: -0.769469 analytic: -0.769470, relative error: 1.227679e-07\n",
+      "numerical: -0.916792 analytic: -0.916792, relative error: 6.621905e-10\n",
+      "numerical: 1.885733 analytic: 1.885733, relative error: 1.017008e-08\n",
+      "numerical: 0.114022 analytic: 0.114022, relative error: 7.940083e-07\n",
+      "numerical: -1.240076 analytic: -1.240076, relative error: 5.294866e-09\n",
+      "numerical: 1.244799 analytic: 1.244799, relative error: 6.289636e-10\n",
+      "numerical: 1.407022 analytic: 1.407022, relative error: 5.323490e-08\n",
+      "numerical: 1.143260 analytic: 1.143260, relative error: 1.315801e-08\n",
+      "numerical: 0.771464 analytic: 0.771464, relative error: 3.971163e-08\n",
+      "numerical: -0.374814 analytic: -0.374814, relative error: 8.690855e-08\n",
+      "numerical: -1.169640 analytic: -1.169640, relative error: 3.461895e-08\n",
+      "numerical: 3.142014 analytic: 3.142014, relative error: 1.513932e-09\n",
+      "numerical: -0.181196 analytic: -0.181196, relative error: 8.341260e-08\n",
+      "numerical: 1.708426 analytic: 1.708426, relative error: 3.655160e-08\n",
+      "numerical: 0.097507 analytic: 0.097507, relative error: 7.555460e-07\n",
+      "numerical: 0.528038 analytic: 0.528038, relative error: 7.940815e-08\n",
+      "numerical: -0.605327 analytic: -0.605327, relative error: 3.821021e-09\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of softmax_loss_naive and implement a (naive)\n",
     "# version of the gradient that uses nested loops.\n",
@@ -232,10 +284,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4a4a81d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naive loss: 2.336495e+00 computed in 0.087672s\n",
+      "vectorized loss: 2.336495e+00 computed in 0.006252s\n",
+      "Loss difference: 0.000000\n",
+      "Gradient difference: 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Now that we have a naive implementation of the softmax loss function and its gradient,\n",
     "# implement a vectorized version in softmax_loss_vectorized.\n",
@@ -376,7 +439,25 @@
    "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
